--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,15 +20,29 @@ services:
   # MongoDb container   
   mongodb_container:
     image: mongo:latest
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: rootpassword
+    # environment:
+    #   MONGO_INITDB_ROOT_USERNAME: admin
+    #   MONGO_INITDB_ROOT_PASSWORD: admin
     ports:
       - 27017:27017
     volumes:
       - mongodb_data_container:/data/db
     networks: 
       - dev-network
+  web:
+    build: ./meter-gen-consumer
+    volumes:
+      - .:/app
+    ports:
+      - 8008:8000
+    networks:
+      - dev-network
+    environment: 
+      - MQADD=amqp://guest:guest@message-broker:5672/%2f
+      - MONGO_URI=mongodb://mongodb_container:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
+    depends_on: 
+      - mongodb_container
+      - message-broker
 
 volumes:
   mongodb_data_container:
